# srs

./: .dockerignore  .gitignore  AUTHORS.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DONATIONS.txt  Dockerfile  Dockerfile.proxy  LICENSE  LICENSE.DUAL  LICENSE.MulanPSL2  PERFORMANCE.md  README.md  README.txt  README2.md  SECURITY.md  Vagrantfile  circle.yml  hello_srs.txt  main.go  main_test.go  objs.tar.bz2  srs.files  srs.includes  srs_fork.sln
proxy/: Makefile  (+15 more)
trunk/: .gitignore  AUTHORS.md  AUTHORS.txt  CMakeLists.txt  Dockerfile  Dockerfile.builds  Dockerfile.cov  Dockerfile.dist  Dockerfile.pkg  Dockerfile.test  configure  srs_fork-Debug.vgdbsettings  srs_fork-Release.vgdbsettings  srs_fork.vcxproj  time.300kbps.flv
trunk/auto/: CMakeLists.txt  apps.sh  auto_headers.sh  build_ffmpeg.sh  codecov.sh  coverage.sh  depends.sh  fast.sh  generate-srs-librtmp-project.sh  generate-srs-librtmp-single.sh  generate_header.sh  libs.sh  local_ip.sh  modules.sh  options.sh  rename.sh  reset_module.sh  setup_variables.sh  summary.sh  utest.sh
trunk/conf/: _development.conf  bandwidth.conf  clion-edge.conf  clion-ingest.conf  clion-srt.conf  clion.conf  compatible.conf  console.conf  console.ipv46.conf  dash.conf  demo.19350.conf  demo.conf  docker.conf  dvr.mp4.conf  dvr.path.conf  dvr.segment.conf  dvr.session.conf  edge.conf  edge.token.traverse.conf  edge2.conf  exec.conf  ffmpeg.conf  ffmpeg.transcode.conf  force.daemon.conf  forward.backend.conf  forward.master.conf  forward.master.rtmps.conf  forward.slave.conf  forward.slave.rtmps.conf  full.conf  full.one.vhost.conf  gb28181-without-sip.conf  gb28181.conf  gb28181.stream.conf  go-oryx-edge.conf  go-oryx-edge2.conf  hds.conf  hevc.conf  hevc.flv.conf  hevc.ts.conf  (+93 more)
trunk/conf/include_test/: include.conf  include_1.conf  include_2.conf  include_3.conf  include_4.conf  include_5.conf  include_6.conf
trunk/doc/: Architecture.md  CHANGELOG.md  Dockers.md  Features.md  PERFORMANCE.md  README.md  Resources.md  hls-m3u8-draft-pantos-http-live-streaming-12.txt  readme.txt  rfc1945-1996-http1.0.txt  rfc2616-1999-http1.1.txt  source.flv  ts-PCR-analysis.txt  ts-audio-video-analysis.mpegts  ts-audio-video-analysis.txt  ts-audio-video-dts-pts.txt  ts-audio-video-ffmpeg.txt
trunk/doc/man/: README  srs-server.8.md
trunk/etc/init.d/: srs  srs-api  srs-demo  srs-demo-19350
trunk/etc/logrotate.d/: srs
trunk/gdb/: srs.py
trunk/ide/: readme.txt
trunk/ide/srs_clion/: CMakeLists.txt
trunk/ide/srs_cmake/: CMakeLists.txt
trunk/ide/srs_emacs/: srs_auto_headers.hpp
trunk/ide/srs_qt/: srs-qt.pro
trunk/ide/srs_upp/: init  srs_upp.upp
trunk/ide/srs_vs2010/: srs.sln  srs.vcxproj  srs.vcxproj.filters
trunk/modules/: readme.txt
trunk/modules/hls-ingester/: config
trunk/modules/mp4-parser/: config
trunk/packaging/nsis/: srs-cli.bat  srs-live.bat  srs-rtc.bat  srs.nsi
trunk/packaging/redhat/: srs.conf  srs.init  srs.logrotate  srs.service  srs.spec
trunk/players/: index.html
trunk/players/jwplayer6/: index.html
trunk/players/osmf/: StrobeMediaPlayback.swf
trunk/players/rtmp/: RtmpPlayer.swf  index.html
trunk/research/: Makefile  index.html  ts_info.cc  ts_info.cpp
trunk/research/SrsBW/: .actionScriptProperties  .project  FlashCS5UI.swc  Video.swc  ui.fla
trunk/research/api-server/: go.mod  server.go  server.py
trunk/research/apm/: APM.md
trunk/research/arm/: jmp.cpp  jmp_2flow.cpp  jmp_flow.cpp  jmp_sp.cpp  pipe_fds.cpp  test.cpp
trunk/research/code-statistic/: cs.py  csr.py
trunk/research/community/: server.py
trunk/research/console/: en_index.html  index.html  ng_index.html
trunk/research/ffempty/: Makefile  ffempty.cc
trunk/research/frame/: bad_alloc0.cpp  bad_alloc1.cpp  frame0.cpp  frame1.cpp  mmap0.cpp  mmap1.cpp  st0.cpp
trunk/research/golang/: fwriter.go
trunk/research/gperftools/: memory.error.notcmalloc.cpp  memory.error.tcmalloc.cpp
trunk/research/hls/: Makefile  check_hls_backup.sh  ts_info.cc
trunk/research/http1-to-2/: .gitignore  Makefile  go.mod  go.sum  main.go
trunk/research/librtmp/: .gitignore  Makefile  srs_aac_raw_publish.c  srs_audio_raw_publish.c  srs_bandwidth_check.c  srs_detect_rtmp.c  srs_flv_codec.h  srs_flv_injecter.c  srs_flv_parser.c  srs_h264_raw_publish.c  srs_ingest_flv.c  srs_ingest_mp4.c  srs_ingest_rtmp.c  srs_play.c  srs_publish.c  srs_research_public.h  srs_rtmp_dump.c  srs_rtmp_uri_decode.c  srs_rtmp_uri_encode.c
trunk/research/lockless/: .gitignore  lockless-int.cpp  lockless-msgqueue.cpp  lockless-queue.cpp  mutex-int.cpp  mutex-msgqueue.cpp  mutex-queue.cpp
trunk/research/msg_zerocopy/: .gitignore  Makefile  client.cpp  server.cpp
trunk/research/players/: api-server_index.html  index.html  jwplayer6.html  nginx_index.html  osmf.html  rtc.html  rtc_datachannel.html  rtc_player.html  rtc_publisher.html  rtc_publisher_simulcast.html  rtc_upload.html  srs-http-server_index.html  srs_bwt.html  srs_chat.html  srs_gb28181.html  srs_player.html  srs_player_deprecated.html  srs_publisher.html  srs_publisher2.html  srs_publisher_flash.html  srs_rtc_player.html  vlc.html  whep.html  whip.html
trunk/research/proto/: cls.proto
trunk/research/python-subprocess/: main.py  python.subprocess.cpp
trunk/research/srs-apm-http-raw/: .gitignore  go.mod  go.sum  main.go
trunk/scripts/: _ffmpeg.demo.sh  _ffmpeg.players.sh  _log.sh  _mirror.utils.sh  _step.build.sh  _step.start.api.server.sh  _step.start.ffmpeg.demo.sh  _step.start.ffmpeg.players.sh  _step.start.nginx.sh  _step.start.srs.19350.sh  _step.start.srs.sh  build.sh  copy_to_gits.sh  csdn.mirror.sh  demo.sh  dev.sh  docker_test.sh  git.commit.sh  git2unix.sh  github.commit.sh  htbt.sh  install.sh  new_authors.sh  oschina.mirror.sh  package-arm.sh  package-raspberrypi.sh  package.sh  perf_gso.py  run.sh  sources_replace.sh  srs.test  stop.sh  test_configure.sh  unstall.sh  verify_confs.sh
trunk/winbuild/: srs-librtmp.def  srs-librtmp_vs2010.sln  srs-librtmp_vs2010.vcxproj  srs-librtmp_vs2010.vcxproj.filters  srs_auto_headers.hpp  srs_play.cpp  srs_play.vcxproj  srs_play.vcxproj.filters
(+849 files in other folders)
